# SciScope

./: .gitignore  AGENT.md  ARCHITECTURE_RFC.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
app/: Cargo.toml
app/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/dsp/: filters.rs
core_engine/: Cargo.toml  fontconfig.pc
core_engine/src/: main.rs  measure.rs
core_engine/src/dsp/: filters.rs  mod.rs  stacking.rs
core_engine/ui/: appwindow.slint
ui/: Cargo.toml  appwindow.slint  build.rs  fontconfig.pc
