[package]
name = "sciscope_app"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5"
v4l = "0.14.0"
slint = "1.6"
rayon = "1.10"
tokio = { version = "1.38", features = ["full"] }
image = "0.25"
csv = "1.3"
zune-jpeg = "0.5.15"
zune-core = "0.5.1"
sciscope_core = { path = "../core" }
sciscope_ui = { path = "../ui" }
